@@ -56,7 +56,8 @@ class backup_qtype_multichoiceset_plugin extends backup_qtype_plugin {
         $multichoiceset = new backup_nested_element('multichoiceset', array('id'), array(
             'layout', 'shuffleanswers',
             'correctfeedback', 'correctfeedbackformat',
-            'incorrectfeedback', 'incorrectfeedbackformat', 'answernumbering', 'shownumcorrect'));
+            'incorrectfeedback', 'incorrectfeedbackformat', 'answernumbering',
+            'shownumcorrect', 'showstandardinstruction'));
 
         // Now the own qtype tree.
         $pluginwrapper->add_child($multichoiceset);
